--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
     "lint": "node_modules/.bin/esw webpack.config.* src tools",
     "lint:watch": "npm run lint -- --watch"
   },
-  "dependencies": {},
+  "dependencies": {
+    "react": "16.2.0",
+    "react-dom": "16.2.0",
+    "react-router": "4.2.0",
+    "react-router-dom": "4.2.2"
+  },
   "devDependencies": {
     "babel-cli": "6.26.0",
     "babel-core": "6.26.0",
@@ -19,7 +24,7 @@
     "babel-preset-react": "6.24.1",
     "babel-preset-stage-0": "6.24.1",
     "css-loader": "0.28.8",
-    "eslint": ">=0.19.0 <5.0.0",
+    "eslint": "4.15.0",
     "eslint-config-standard": "10.2.1",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-node": "5.2.1",
@@ -29,13 +34,8 @@
     "eslint-watch": "3.1.3",
     "express": "4.16.2",
     "moment": "2.20.1",
-    "moment-range": "3.1.0",
     "npm-run-all": "4.1.2",
     "open": "0.0.5",
-    "react": "16.2.0",
-    "react-dom": "16.2.0",
-    "react-router": "4.2.0",
-    "react-router-dom": "4.2.2",
     "style-loader": "0.19.1",
     "webpack": "3.10.0",
     "webpack-dev-middleware": "1.12.2",
