--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,10 @@
 {
-    "extends": "standard",
-    "plugins": [
-        "standard", "react"
-    ],
-    "rules": {
-      "react/jsx-uses-react": "error", "react/jsx-uses-vars": "error"
-    }
+  "parser": "babel-eslint",
+  "extends": "standard",
+  "plugins": [
+      "standard", "react"
+  ],
+  "rules": {
+    "react/jsx-uses-react": "error", "react/jsx-uses-vars": "error"
+  }
 }
